--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build": "microbundle src/nanomachine.js",
     "dev": "microbundle watch",
     "test": "npm run -s build && mocha --require babel-core/register test",
-    "test:watch": "mocha --require babel-core/register \"test/**/*.test.js\" --watch"
+    "test:watch": "mocha --require babel-core/register \"test/**/*.test.js\" --watch",
+    "preversion": "npm run test",
+    "version": "rm -rf dist && npm run build && git add -A dist",
+    "postversion": "git push origin master && git push --tags && rm -rf dist"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
