changed description npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@thadeu/nanomachine",
   "version": "1.0.2",
-  "description": "🔐 nanomachine is a state machine for tiny JS with < 1Kb",
+  "description": "🔐 nanomachine is a state machine for tiny JS with < 2 Bytes",
   "author": "Thadeu Esteves<tadeuu@gmail.com>",
   "license": "MIT",
   "source": "src/nanomachine.js",
